Fix media title not word-wrapping.

--- a/app/assets/stylesheets/pages/_diary.scss
+++ b/app/assets/stylesheets/pages/_diary.scss
@@ -360,6 +360,11 @@ $diary-card-border: 1px solid #dddddd;
     .item-show {
       position: relative;
 
+      .title {
+        margin: 0 .5em;
+        word-break: break-word;
+      }
+
       .description {
         word-break: break-word;
       }
